--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "homepage": "https://BrandonRonaldRoy.github.io/portfolio",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.3.0",
+    "@fortawesome/free-regular-svg-icons": "^6.3.0",
+    "@fortawesome/free-solid-svg-icons": "^6.3.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +22,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-social-icons": "^5.15.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -49,6 +54,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-vertical-timeline-component": "^3.3.3",
     "autoprefixer": "^10.4.13",
     "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
